<resources>
    <string name="app_name">EServer</string>

    <string name="userid">工号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="config_pwd">密码确认</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="change_pwd">修改密码</string>
    <string name="bind_phone">绑定手机</string>
    <string name="verify_code">验证码</string>
    <string name="bluetooth">蓝牙连接</string>
    <string name="openbluetooth">开启蓝牙连接</string>
    <string name="start">选择菜单</string>
    <string name="work_log">工作日志</string>
    <string name="my_task">我的任务</string>
    <string name="no_check">今日未签到</string>
    <string name="check_in">今日已签到</string>
    <string name="setting">设置</string>
    <string name="baud_rate">波特率</string>
    <string name="rate_3600">3600</string>
    <string name="rate_9600">9600</string>
    <string name="rate_1200">1200</string>
    <string name="rate_2400">2400</string>
    <string name="check_way">校验方式</string>
    <string name="Eparity">偶校验</string>
    <string name="Oparity">奇校验</string>
    <string name="Nparity">无校验</string>
    <string name="connect">连接设备</string>
    <string name="reimbursement">费用报销</string>
    <string name="location">所在地</string>
    <string name="accommodation">住宿费</string>
    <string name="RMB">人民币</string>
    <string name="food">伙补费</string>
    <string name="office">办事处费用</string>
    <string name="low_value_consumables">低值易耗品</string>
    <string name="welfare">福利费</string>
    <string name="hospitality">招待费</string>
    <string name="travel">车船费</string>
    <string name="vehicle">车辆费用</string>
    <string name="material">材料费</string>
    <string name="courier">快递费</string>
    <string name="administrative">办公费</string>
    <string name="others">其他费用</string>
    <string name="next">下一步</string>
    <string name="work_detail">工作内容</string>
    <string name="description">说明</string>
    <string name="commit">提交</string>
    <string name="default_text">未命名</string>
    <string name="table_address">表计地址</string>
    <string name="protocol_type">协议类型</string>
    <string name="data_identification">数据标识</string>
    <string name="read_result">抄读结果</string>
    <string name="delete">删除</string>
    <string name="startreaddata">开始抄读</string>

</resources>
